--- a/Downloads/combucha-shop-main/combucha-shop-main/frontend/src/components/Feedback/Feedback.module.css
+++ b/Downloads/combucha-shop-main/combucha-shop-main/frontend/src/components/Feedback/Feedback.module.css
@@ -1,15 +1,14 @@
 .feedbackContainer {
-  max-width: 500px;
   margin: 0 auto;
   background: #fcfeff;
   border-radius: 32px;
   padding: 17px;
   position: relative;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .title {
-  font-family: "Bowlby One", sans-serif;
+  font-family: 'Bowlby One', sans-serif;
   font-size: 36px;
   line-height: 130%;
   font-weight: 400;
@@ -37,7 +36,7 @@
 }
 
 .label {
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 24px;
   line-height: 110%;
   font-weight: 700;
@@ -77,7 +76,7 @@
   background: #f0f5fa;
   font-size: 16px;
   line-height: 130%;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
   color: #adb5bd;
   border: none;
   resize: none;
@@ -98,7 +97,7 @@
 .submitBtn {
   background: #fe1468;
   color: #fcfeff;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 16px;
   line-height: 130%;
   font-weight: 700;
@@ -121,7 +120,7 @@
   border-radius: 32px;
   padding: 17px;
 
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -130,7 +129,7 @@
 
 .thankYouMessage h2 {
   display: block;
-  font-family: "Bowlby One", sans-serif;
+  font-family: 'Bowlby One', sans-serif;
   font-size: 36px;
   line-height: 130%;
   font-weight: 400;
