--- a/Downloads/combucha-shop-main/combucha-shop-main/frontend/src/components/Timeline/Timeline.module.css
+++ b/Downloads/combucha-shop-main/combucha-shop-main/frontend/src/components/Timeline/Timeline.module.css
@@ -3,22 +3,24 @@
   max-width: 700px;
   margin: 0 auto;
   padding: 2rem 0;
+  z-index: 6;
 }
 
 .item {
   display: flex;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
   margin: 2rem 0;
   width: 100%;
   position: relative;
+  /* margin-left: 30%; */
 }
 
 .item.left {
-  justify-content: flex-start;
+  margin-right: 30%;
 }
 
 .item.right {
-  justify-content: flex-end;
+  margin-left: 20%;
 }
 
 .bubble {
@@ -79,4 +81,5 @@
   line-height: 1.4;
   color: #333;
   margin-top: 0.8rem;
+  background: white;
 }
