--- a/frontend/src/components/ProductCard/Product.module.css
+++ b/frontend/src/components/ProductCard/Product.module.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Bowlby+One&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");
-@import url("https://uk.allfont.net/allfont.css?fonts=bowlby-one");
+@import url('https://fonts.googleapis.com/css2?family=Bowlby+One&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+@import url('https://uk.allfont.net/allfont.css?fonts=bowlby-one');
 
 .list {
   padding: 20px;
@@ -47,14 +47,14 @@ a {
 .sectionTitle {
   align-self: flex-start;
   text-transform: uppercase;
-  font-family: "Bowlby One", arial;
+  font-family: 'Bowlby One', arial;
   font-size: 2rem;
   color: #343a40;
   line-height: 1.2;
 }
 
 .sectionTitlePink {
-  font-family: "Bowlby One", arial;
+  font-family: 'Bowlby One', arial;
   font-size: 2rem;
   text-transform: uppercase;
   color: #343a40;
@@ -86,7 +86,6 @@ h2 {
 
 .image {
   width: 100%;
-  height: 216px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -110,7 +109,6 @@ h2 {
     #f5faff 74.97%,
     #e9edf2 96.39%
   );
-  height: 297px;
   border-radius: 24px;
   padding: 1rem;
 }
