--- a/frontend/src/assets/styles/HomePage.module.css
+++ b/frontend/src/assets/styles/HomePage.module.css
@@ -146,7 +146,34 @@ svg {
   width: 100%;
   padding: 10px;
 }
-
+.sectionWizPos {
+  position: relative;
+  z-index: 2;
+  background-color: #fcfeff;
+  border-radius: 0.85rem;
+  width: 100%;
+  padding: 10px;
+}
+.section_title {
+  font-family: 'Bowlby One', arial;
+  font-size: 2.5rem;
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  text-align: left;
+}
+.section_titleR {
+  font-family: 'Bowlby One', arial;
+  font-size: 2.5rem;
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  text-align: left;
+  color: #fe1468;
+  margin-top: -17px;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
 .section_text {
   font-family: 'Nutino', sans-serif;
   font-weight: 400;
