--- a/frontend/src/pages/ProductPage/MainSlider/slick.css
+++ b/frontend/src/pages/ProductPage/MainSlider/slick.css
@@ -47,7 +47,8 @@
   position: relative;
   top: 0;
   left: 0;
-
+  background-color: #fcfeff;
+  border-radius: 18px;
   display: flex;
   align-items: center;
   /* margin-left: auto;
@@ -57,7 +58,7 @@
 .slick-track:after {
   display: table;
 
-  content: "";
+  content: '';
 }
 .slick-track:after {
   clear: both;
@@ -74,7 +75,7 @@
   height: 100%;
   min-height: 1px;
 }
-[dir="rtl"] .slick-slide {
+[dir='rtl'] .slick-slide {
   float: right;
 }
 .slick-slide img {
