--- a/frontend/src/pages/ProductPage/MainSlider/MainSlider.module.css
+++ b/frontend/src/pages/ProductPage/MainSlider/MainSlider.module.css
@@ -8,7 +8,20 @@
   margin-bottom: 16px;
   overflow: hidden;
 }
+.mainSliderBack :global(.slick-slide) img {
+  display: block;
+  margin: 0 auto;
+  max-height: 300px;
+  width: auto;
+  object-fit: contain;
+}
 
+.mainSliderBack :global(.slick-slide) > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 311px;
+}
 .sale {
   position: absolute;
   top: 0;
