--- a/frontend/src/components/ProductCard/Product.module.css
+++ b/frontend/src/components/ProductCard/Product.module.css
@@ -89,7 +89,7 @@ h2 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 250px;
+  /* height: 250px; */
 }
 
 .title {
