--- a/frontend/src/assets/styles/HomePage.module.css
+++ b/frontend/src/assets/styles/HomePage.module.css
@@ -35,7 +35,7 @@ img,
 video,
 iframe,
 svg {
-  max-width: 100% !important;
+  /* max-width: 100% !important; */
   /* height: auto; */
 }
 .homeHead {
