--- a/frontend/src/components/ProductCard/Product.module.css
+++ b/frontend/src/components/ProductCard/Product.module.css
@@ -89,7 +89,8 @@ h2 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* height: 250px; */
+  max-height: 300px;
+  height: 100%;
 }
 
 .title {
